fix client and partner conflict spacing

--- a/public/custom.css
+++ b/public/custom.css
@@ -79,7 +79,7 @@ body {
 }
 
 .section-hero {
-    margin-top: 10vh;
+    /* margin-top: 10vh; */
     height: 100vh;
 }
 
@@ -243,7 +243,7 @@ body {
 }
 
 .section-clients {
-    height: 100vh;
+    height: auto;
 }
 
 .svg-container {
